<resources>
    <string name="app_name">GoodWeather</string>
    <string name="hello_message">Hello World!</string>
    <string name="say_hello_button">Say Hello</string>
    <string name="hello_message_response">Hello Android</string>
    <string name="city_name">City name</string>
    <string name="check">Check</string>
    <string name="icon">Icon</string>
    <string name="forecast">Forecast</string>
    <string name="day_forecast">Day forecast</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="photo">photo</string>
    <string name="personal_info">Personal info</string>
    <string name="email_address">Email address</string>
    <string name="full_name">Full name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="invalidForm">Invalid form</string>
    <string name="close">Close</string>
    <string name="tracking">Tracking</string>
    <string name="tracking_fragment_label">Tracking</string>
    <string name="tracking_duration">Duration</string>
    <string name="tracking_speed">Speed</string>
    <string name="tracking_pace">Pace</string>
    <string name="enter_login_name">Enter login name</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
</resources>